--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Recommender System</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -9,23 +10,30 @@
         body {
             background-color: #0d0d0d;
             color: white;
+            font-family: Arial, sans-serif;
         }
         .navbar {
             background-color: #18044a;
             border: none;
             margin-bottom: 50px;
         }
-        .navbar-brand {
+        .navbar-brand, .nav > li > a {
             color: white !important;
         }
         .form-control {
             background-color: #222;
             color: white;
             border: 1px solid #444;
+            border-radius: 5px;
         }
         .btn-warning {
             background-color: #ff5722;
             border-color: #ff5722;
+            color: white;
+        }
+        .btn-warning:hover {
+            background-color: #e64a19;
+            border-color: #e64a19;
         }
         .card {
             background-color: #222;
@@ -34,12 +42,30 @@
             margin-top: 20px;
             text-align: center;
             color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
         }
         .card img {
             max-width: 100%;
             height: auto;
             margin-bottom: 15px;
             border-radius: 10px;
+        }
+        .alert-danger {
+            text-align: center;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        @media (max-width: 768px) {
+            .form-inline {
+                flex-direction: column;
+            }
+            .form-control {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+            .btn-warning {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -57,6 +83,7 @@
         </div>
     </nav>
 
+    <!-- Main Content -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -64,7 +91,14 @@
 
                 <!-- Form for Book Recommendation -->
                 <form action="/recommend_books" method="post" class="form-inline" style="text-align: center; margin-top: 30px;">
-                    <input name="user_input" type="text" class="form-control" placeholder="Enter book/author name" style="width: 60%; margin-right: 10px;">
+                    <input 
+                        name="user_input" 
+                        type="text" 
+                        class="form-control" 
+                        placeholder="Enter book title or author name" 
+                        style="width: 60%; margin-right: 10px;" 
+                        required
+                    >
                     <input type="submit" class="btn btn-lg btn-warning" value="Get Recommendations">
                 </form>
             </div>
@@ -72,7 +106,7 @@
 
         <!-- Error Message -->
         {% if error %}
-        <div class="alert alert-danger" style="margin-top: 20px;">
+        <div class="alert alert-danger">
             {{ error }}
         </div>
         {% endif %}
@@ -81,7 +115,7 @@
         <div class="row">
             {% if data %}
                 {% for i in data %}
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <div class="card">
                             <img class="card-img-top" src="{{ i[2] }}" alt="Book Cover">
                             <h4>{{ i[0] }}</h4>
